<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orderInCategory="10"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_profile"
            android:title="@string/home"/>
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_profile"
            android:title="@string/categories"/>
        <item
            android:id="@+id/nav_user"
            android:icon="@drawable/ic_profile"
            android:title="@string/users" />

    </group>

    <!--<item android:title="Communicate"
        android:id="@+id/group_title_1">
        <menu>
            <item
                android:id="@+id/about"
                android:icon="@drawable/ic_info_outline_black_24dp"
                android:title="@string/about" />
            <item
                android:id="@+id/contact"
                android:icon="@drawable/ic_phone_black_24dp"
                android:title="@string/contact" />
        </menu>
    </item>-->

</menu>
